# docs/swagger.json
@@ -69,7 +69,7 @@
         },
         "/api/users": {
             "get": {
-                "description": "Get a list of all users",
+                "description": "Get a list of all users with pagination",
                 "produces": [
                     "application/json"
                 ],
@@ -82,6 +82,18 @@
                         "type": "integer",
                         "description": "User ID",
                         "name": "id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Number of items per page",
+                        "name": "size",
                         "in": "query"
                     },
                     {
@@ -125,7 +137,7 @@
                 "branch_id": {
                     "type": "integer"
                 },
-                "create_date": {
+                "createDate": {
                     "type": "string"
                 },
                 "edit_by": {
@@ -165,13 +177,12 @@
                     "type": "integer"
                 },
                 "u_code": {
-                    "description": "คำนวณเป็น Virtual column ใน DB",
                     "type": "string"
                 },
                 "u_index": {
                     "type": "integer"
                 },
-                "update_date": {
+                "updateDate": {
                     "type": "string"
                 },
                 "user_type_id": {
